syntax = "proto3";
package media;

option go_package = "../binary";

import "messages.proto";

message StartMediaUploadPayload {
    int64 imageType = 1;
    messages.AuthMessage authData = 2;
    messages.Device mobile = 3;
}

message UploadMediaResponse {
    Media media = 1;
    string message = 2;
}

message Media {
    string mediaID = 1;
    int64 mediaNumber = 2;
}
